lesson8/deployment/individual/myhttpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myhttpserver-svc
spec:
  type: ClusterIP
  ports:
    - port: 9095
      targetPort: 9090
      protocol: TCP
      name: http     
  selector:
    app: myhttpserver
