lesson8/deployment/individual/myhttpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  tls:
    - hosts:
       - myhttpserver.com
      secretName: myhttpserver-tls
  rules:
     - host: myhttpserver.com
       http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: myhttpserver-svc
                port:
                  number: 9095
